# Engine_reboot

./: .gitattributes  .gitignore  CMakeLists.txt  FileLoader.cpp  UpgradeLog.htm  build_wasm.bat  extensions.h  index.html  modelLookup.h  start.bat  test2.sln  test2.vcxproj  test2.vcxproj.filters  windowsMain.h
Resources/Shader/: test.frag  test.fs  test.vert  test.vs
include/engine/: Entity.h  FileLoader.h  GL.h  Main.h  World.h  resourceManager.cpp  resourceManager.h
include/engine/core/: entity.h  fileLoader.h  modelLookup.h  resourceManager.h  singleton.cpp  singleton.h  types.h  world.h
lib/entt/: entt.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
output/: output.data  output.html  output.js  output.wasm  start.bat
resources/: models.json
resources/models/: Untitled.gltf  torus.glb
resources/shaders/: test.frag  test.vert
src/engine/: Engine_reboot.lnk  Entity.cpp  FileLoader.cpp  Main.cpp  World.cpp  modelLookup.cpp  resourceManager.cpp
src/engine/core/: entity.cpp  modelLookup.cpp  resourceManager.cpp  world.cpp
src/engine/private/core/: Main.cpp  components.cpp  entity.cpp  input.cpp  material.cpp  modelLookup.cpp  resourceManager.cpp  shader.cpp  world.cpp
src/engine/private/core/files/: gltf.cpp  vectors.cpp
src/engine/public/core/: Events.h  Main.h  components.h  entity.h  extensions.h  fileLoader.h  input.h  material.h  modelLookup.h  resourceManager.h  shader.h  singleton.h  types.h  vectors.h  world.h
src/engine/public/core/files/: gltf.h
src/engine/public/core/input/: input_Events.h  input_types.h
src/network/: components.cpp  messages.h  net_client.h  parser.h  remote_client.h  serialize.h
src/network/private/: remote_client.cpp
src/platform/emscripten/: Main.cpp  input.cpp  inputEms.cpp
src/platform/emscripten/network/: net_client.cpp
src/platform/win/: Main.cpp  components.cpp  input.cpp  inputWin.cpp
src/platform/win/network/: net_client.cpp
